# ui_interaction

./: .gitignore  Cargo.toml  old_element.rs  plan.md  readme.md
.claude/: settings.local.json
.cursor/rules/: rust.mdc
docs/: python_api.md  python_usage.md
examples/: debug_window.rs  extract_text_json.rs  list_applications_demo.rs  main.rs  minimalpython.rs  notepad_scoped_demo.rs  text_extraction_demo.rs  unicode_test.rs  vesktop_demo.rs
references/: app_context.rs  elements.rs  windows.rs
scripts/: example.py
src/: automation.rs  core.rs  factory.rs  lib.rs  main.rs  python_bindings.rs  script_runner.rs  text.rs  windows.rs
src/platform/: mod.rs
src/platform/windows/: app_context.rs  app_manager.rs  automation.rs  element.rs  mod.rs  window.rs
uia_interaction/: uia_interaction.cp312-win_amd64.pyd
uia_interaction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
